Fixed overlapping scrolling issue with footer, refactoring, and improved responsiveness of app (including header)

--- a/src/assets/scss/components/dashboard.scss
+++ b/src/assets/scss/components/dashboard.scss
@@ -50,6 +50,10 @@ $sectionAreaSpacing: 15px;
   }
 }
 
+.footerStyling {
+  margin-bottom: 50px;
+}
+
 .loading {
   display: flex;
   width: 100%;
