--- a/src/assets/scss/layout/_layout.scss
+++ b/src/assets/scss/layout/_layout.scss
@@ -1,3 +1,5 @@
+
+
 // Root container
 // ---------------------------------------------------------
 #root {
@@ -7,10 +9,13 @@
 // Page Header:
 // ---------------------------------------------------------
 .header {
-  .pf-c-page__header-brand-toggle .pf-c-button {
-    margin-right: 0;
-    @media screen and (min-width: 992px) {
-      display: none !important;
+  .pf-c-page__header-brand-toggle {
+    display: flex;
+    .pf-c-button {
+      margin-right: 0;
+      @media screen and (min-width: 992px) {
+        display: none !important;
+      }
     }
   }
 }
